# android-k2pdfopt

./: .gitignore  CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
libk2pdfopt/: CMakeLists.txt  build.gradle
libk2pdfopt/src/main/cpp/k2pdfopt/: k2ocr.c
libk2pdfopt/src/main/cpp/willus/: linux.c
src/main/cpp/: jni.cpp
